[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/UI/logo.png" type="Texture" id=1]
[ext_resource path="res://src/UI/uni0553-webfont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/button_selected.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button_unpressed.png" type="Texture" id=5]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Options.tscn" type="PackedScene" id=7]
[ext_resource path="res://sound/music/menu.ogg" type="AudioStream" id=8]
[ext_resource path="res://sound/ui/button_press.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/ui/ui1.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_top = 2
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/icons/ = null
Label/styles/normal = null

[sub_resource type="DynamicFont" id=5]
size = 8
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "labelchange"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonInfo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 256, 24 ), Vector2( 232, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonInfo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.878431, 0.909804, 0 ), Color( 0.87451, 0.878431, 0.909804, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "entrance"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 96 ), Vector2( 0, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("logo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 192, 8 ), Vector2( 192, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("logo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "exit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 64 ), Vector2( 0, 96 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("logo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 192, 40 ), Vector2( 192, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("logo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_music = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 216.0
color = Color( 0.0784314, 0.0941176, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="."]
position = Vector2( 192, 40 )
texture = ExtResource( 1 )

[node name="version" type="Label" parent="logo"]
margin_left = -47.0
margin_top = 14.0
margin_right = 49.0
margin_bottom = 28.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
text = "0.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteLine" type="ColorRect" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -60.0
margin_right = 0.5
margin_bottom = 60.0
color = Color( 0.87451, 0.878431, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Menu"]
margin_left = 88.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Menu/Buttons"]
margin_top = 22.0
margin_right = 64.0
margin_bottom = 38.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Menu/Buttons"]
margin_top = 42.0
margin_right = 64.0
margin_bottom = 58.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Menu/Buttons"]
margin_top = 62.0
margin_right = 64.0
margin_bottom = 78.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Menu/Buttons"]
margin_top = 82.0
margin_right = 64.0
margin_bottom = 98.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Buttons/Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButtons" type="Control" parent="Menu"]
visible = false
margin_left = 88.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="Menu/PlayButtons"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 48.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/PlayButtons/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="TextureButton" parent="Menu/PlayButtons"]
margin_top = 52.0
margin_right = 64.0
margin_bottom = 68.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/PlayButtons/LevelSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "level select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTrial" type="TextureButton" parent="Menu/PlayButtons"]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 88.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/PlayButtons/TimeTrial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "time trial"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTrialButtons" type="Control" parent="Menu"]
visible = false
margin_left = 88.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="TextureButton" parent="Menu/TimeTrialButtons"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 48.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/TimeTrialButtons/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "single level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullGame" type="TextureButton" parent="Menu/TimeTrialButtons"]
margin_top = 52.0
margin_right = 64.0
margin_bottom = 68.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/TimeTrialButtons/FullGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "full game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="TextureButton" parent="Menu/TimeTrialButtons"]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 88.0
focus_mode = 0
mouse_filter = 2
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/TimeTrialButtons/Highscores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 4 )
text = "highscores"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInfo" type="Label" parent="Menu"]
modulate = Color( 0.87451, 0.878431, 0.909804, 0 )
margin_left = 232.0
margin_top = 24.0
margin_right = 304.0
margin_bottom = 128.0
theme = SubResource( 6 )
text = "Play the game."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInfoAnim" type="AnimationPlayer" parent="Menu"]
anims/labelchange = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/entrance = SubResource( 8 )
anims/exit = SubResource( 9 )

[node name="Options" parent="." instance=ExtResource( 7 )]
visible = false

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "sounds"

[node name="ui1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "sounds"

[connection signal="focus_entered" from="Menu/Buttons/Play" to="." method="_on_Play_focus_entered"]
[connection signal="pressed" from="Menu/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="focus_entered" from="Menu/Buttons/Options" to="." method="_on_Options_focus_entered"]
[connection signal="pressed" from="Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="focus_entered" from="Menu/Buttons/Credits" to="." method="_on_Credits_focus_entered"]
[connection signal="pressed" from="Menu/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="focus_entered" from="Menu/Buttons/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="pressed" from="Menu/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="focus_entered" from="Menu/PlayButtons/Continue" to="." method="_on_Continue_focus_entered"]
[connection signal="pressed" from="Menu/PlayButtons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="focus_entered" from="Menu/PlayButtons/LevelSelect" to="." method="_on_LevelSelect_focus_entered"]
[connection signal="pressed" from="Menu/PlayButtons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="focus_entered" from="Menu/PlayButtons/TimeTrial" to="." method="_on_TimeTrial_focus_entered"]
[connection signal="pressed" from="Menu/PlayButtons/TimeTrial" to="." method="_on_TimeTrial_pressed"]
[connection signal="focus_entered" from="Menu/TimeTrialButtons/Level" to="." method="_on_Level_focus_entered"]
[connection signal="pressed" from="Menu/TimeTrialButtons/Level" to="." method="_on_Level_pressed"]
[connection signal="focus_entered" from="Menu/TimeTrialButtons/FullGame" to="." method="_on_FullGame_focus_entered"]
[connection signal="pressed" from="Menu/TimeTrialButtons/FullGame" to="." method="_on_FullGame_pressed"]
[connection signal="focus_entered" from="Menu/TimeTrialButtons/Highscores" to="." method="_on_Highscores_focus_entered"]
[connection signal="pressed" from="Menu/TimeTrialButtons/Highscores" to="." method="_on_Highscores_pressed"]
